fixed z-index for modal and keys so keys arent coming on top

--- a/app/assets/stylesheets/keyboard.css.scss
+++ b/app/assets/stylesheets/keyboard.css.scss
@@ -30,7 +30,7 @@
   margin-top: -1px;
   transform: scale(1);
   position: relative;
-  z-index: 10;
+  z-index: 1;
   border-radius: 2px;
 }
 
@@ -78,7 +78,7 @@
   background: #000;
   width: 30px;
   height: 120px;
-  z-index: 20;
+  z-index: 2;
   box-shadow: 5px -5px 20px 0px #aaa;
   transition: all .3s linear;
 }
